; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_NV_transform_feedback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_NV_transform_feedback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_NV_transform_feedback = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"glBeginTransformFeedbackNV\00", align 1
@glad_glBeginTransformFeedbackNV = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [25 x i8] c"glEndTransformFeedbackNV\00", align 1
@glad_glEndTransformFeedbackNV = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [29 x i8] c"glTransformFeedbackAttribsNV\00", align 1
@glad_glTransformFeedbackAttribsNV = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [20 x i8] c"glBindBufferRangeNV\00", align 1
@glad_glBindBufferRangeNV = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [21 x i8] c"glBindBufferOffsetNV\00", align 1
@glad_glBindBufferOffsetNV = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [19 x i8] c"glBindBufferBaseNV\00", align 1
@glad_glBindBufferBaseNV = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [30 x i8] c"glTransformFeedbackVaryingsNV\00", align 1
@glad_glTransformFeedbackVaryingsNV = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [18 x i8] c"glActiveVaryingNV\00", align 1
@glad_glActiveVaryingNV = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [23 x i8] c"glGetVaryingLocationNV\00", align 1
@glad_glGetVaryingLocationNV = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [21 x i8] c"glGetActiveVaryingNV\00", align 1
@glad_glGetActiveVaryingNV = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [32 x i8] c"glGetTransformFeedbackVaryingNV\00", align 1
@glad_glGetTransformFeedbackVaryingNV = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [35 x i8] c"glTransformFeedbackStreamAttribsNV\00", align 1
@glad_glTransformFeedbackStreamAttribsNV = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_NV_transform_feedback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_NV_transform_feedback(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_NV_transform_feedback, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %31

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glBeginTransformFeedbackNV, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glEndTransformFeedbackNV, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glTransformFeedbackAttribsNV, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glBindBufferRangeNV, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glBindBufferOffsetNV, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glBindBufferBaseNV, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glTransformFeedbackVaryingsNV, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glActiveVaryingNV, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glGetVaryingLocationNV, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glGetActiveVaryingNV, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glGetTransformFeedbackVaryingNV, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glTransformFeedbackStreamAttribsNV, align 8
  br label %31

31:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
